@@ -21,5 +21,11 @@
 #undef UNEXEC
 #define UNEXEC unexsol.o
 
+/* This is used in list_system_processes.  */
+#define HAVE_PROCFS 1
+
+/* This is needed for the system_process_attributes implementation.  */
+#define _STRUCTURED_PROC 1
+
 /* arch-tag: 7c51a134-5469-4d16-aa00-d69224640eeb
    (do not change this comment) */
